--- a/BookExchange3/BookExchange3/Views/Home/About.cshtml
+++ b/BookExchange3/BookExchange3/Views/Home/About.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Book Exchange Application</h3>
+<br />
+<h4>By Rustam Mirzaev</h4>
+<p>Phone: 216-801-6162</p>
+<p>Email: rustammirzaev606@gmail.com</p>
+<p>GitHub: rustammirzaev606</p>
 
-<p>Use this area to provide additional information.</p>
+<p></p>
