saving before adding admin rights

--- a/BookExchange3/BookExchange3/Views/Books/Confirmation.cshtml
+++ b/BookExchange3/BookExchange3/Views/Books/Confirmation.cshtml
@@ -3,6 +3,15 @@
     ViewBag.Title = "Thank You!";
 }
 
-<h2>Thank You!</h2>
-<p>We will wait for to drop off the book at TRI-C</p>
+<h2>Thank You For Your Donation!</h2>
+<p>
+    We will wait for you to drop off that book at
+</p>
+<p>
+    Room 100 
+    <br />
+    3409 Woodland Ave, Cleveland, OH 44115
+    <br />
+    Located in: Cuyahoga Community College Metropolitan Campus
+</p>
 
