--- a/BookExchange3/BookExchange3/Views/Home/Index.cshtml
+++ b/BookExchange3/BookExchange3/Views/Home/Index.cshtml
@@ -14,7 +14,9 @@
     <div class="col-md-4">
         <h2>Get a FREE book</h2>
         <p>
-            Enlight yourself!
+            Whenever you read a good book, somewhere in the world a door opens to allow in more light.
+
+            –Vera Nazarian
         </p>
         <p><a class="btn btn-default" url=@Html.ActionLink("Get a book","ListOfBooks","Books")</a></p>
     </div>
@@ -24,8 +26,8 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Tri-C</h2>
+        <p>Cuyahoga Community College strives to create positive, nurturing and learning-focused environments for students. Whether you are seeking a degree, interested in gaining a new skill or exploring a new hobby, you can choose from many programs and courses. </p>
+        <p><a class="btn btn-default" href="http://www.tri-c.edu/">Learn more &raquo;</a></p>
     </div>
 </div>
