--- a/BookExchange3/BookExchange3/Views/Home/About.cshtml
+++ b/BookExchange3/BookExchange3/Views/Home/About.cshtml
@@ -5,8 +5,14 @@
 <h3>Book Exchange Application</h3>
 <br />
 <h4>By Rustam Mirzaev</h4>
+<p>Software Developer in Training</p>
+<p> Cleveland Codes Tri-C Software Developers Academy</p>
+<p>IT Center of Excellence</p>
+<p>Advanced Technology Center</p>
+<p>3409 Woodland Avenue, Cleveland, OH 44115</p>
+
 <p>Phone: 216-801-6162</p>
-<p>Email: rustammirzaev606@gmail.com</p>
+<p>Email: S01135804@acad.tri-c.edu</p>
 <p>GitHub: rustammirzaev606</p>
 
 <p></p>
