Saving while its working!

--- a/BookExchange3/BookExchange3/Views/Books/ListOfBooks.cshtml
+++ b/BookExchange3/BookExchange3/Views/Books/ListOfBooks.cshtml
@@ -47,7 +47,7 @@
             @Html.DisplayFor(modelItem => item.ISBN)
         </td>
         <td>
-            @Html.ActionLink("Reserve","Create", "Reserves", new { id = item.ID }, null)
+            @Html.ActionLink("Reserve","Reserve", "Reserves", new { id = item.ID }, null)
 
         </td>
         @*<td>
