--- a/BookExchange3/BookExchange3/Views/Reserves/Confirmed.cshtml
+++ b/BookExchange3/BookExchange3/Views/Reserves/Confirmed.cshtml
@@ -4,8 +4,8 @@
 }
 
 <h2>Thank You For Your Request</h2>
-<p>
-    We will reserve this book for you to pick up untill @ViewBag.Message at
+<p >
+    We will reserve this book for you to pick up for three days at
 </p>
 <p>
     Room 100 
