--- a/BookExchange3/BookExchange3/Views/Home/Index.cshtml
+++ b/BookExchange3/BookExchange3/Views/Home/Index.cshtml
@@ -21,9 +21,9 @@
         <p><a class="btn btn-default" url=@Html.ActionLink("Get a book","ListOfBooks","Books")</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Cant Find A Desired Book?</h2>
+        <p>Give us a request. We will inform you whenever we will have that book for You</p>
+        <p><a class="btn btn-default" url=@Html.ActionLink("Request","Create","Requests")</a></p>
     </div>
     <div class="col-md-4">
         <h2>Tri-C</h2>
