--- a/BookExchange3/BookExchange3/Views/Home/Index.cshtml
+++ b/BookExchange3/BookExchange3/Views/Home/Index.cshtml
@@ -3,7 +3,11 @@
 }
 
 <div class="jumbotron">
-    <h2>A GREAT BOOK BEGINS WITH AN IDEA; A GREAT LIFE, WITH A DETERMINATION.</h2>
+    <h2>
+        A GREAT BOOK BEGINS WITH AN IDEA;
+        <br />
+        A GREAT LIFE, WITH A DETERMINATION.
+    </h2>
     
     <p class="lead">By donating books you give other people the opportunity to discover for themselves that ONE book that could change their life.</p>
     <p><a class="btn btn-primary btn-lg" url=@Html.ActionLink("Donate", "Donate", "Books")</a></p>
@@ -27,7 +31,7 @@
     </div> 
     <div class="col-md-4">
         <h2>Tri-C</h2>
-        <p>Cuyahoga Community College strives to create positive, nurturing and learning-focused environments for students. Whether you are seeking a degree, interested in gaining a new skill or exploring a new hobby, you can choose from many programs and courses. </p>
+        <p>Where Future Begins! </p>
         <p><a class="btn btn-default" href="http://www.tri-c.edu/">Learn more &raquo;</a></p>
     </div>
 </div>
