New typo changes

--- a/BookExchange3/BookExchange3/Views/Home/Index.cshtml
+++ b/BookExchange3/BookExchange3/Views/Home/Index.cshtml
@@ -25,8 +25,8 @@
         <p><a class="btn btn-default" url=@Html.ActionLink("Get a book","ListOfBooks","Books")</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Cant Find A Desired Book?</h2>
-        <p>Give us a request. We will inform you whenever we will have that book for You</p>
+        <h2>Request a Book</h2>
+        <p>We will inform you whenever we will have that book for You</p>
         <p><a class="btn btn-default" url=@Html.ActionLink("Request","Create","Requests")</a></p>
     </div> 
     <div class="col-md-4">
