--- a/BookExchange3/BookExchange3/Views/Role/Index.cshtml
+++ b/BookExchange3/BookExchange3/Views/Role/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Add Role";
 }
-<table style=" background-color:#FFFFFF; border dashed 3px #6D7B8D; padding 5px;width 99%;table-layout:fixed;" cellpadding="6" cellspacing="6">
+<table style=" background-color:#FFFFFF; border: dashed 3px #6D7B8D; padding 5px;width 99%;table-layout:fixed;" cellpadding="6" cellspacing="6">
     <tr style="height: 30px; background-color:#336699 ; color:#FFFFFF ;border: solid 1px #659EC7;">
         <td align="center" colspan="2">
             <h2> Create User Roles</h2>
